--- a/TriangularLake/app/build.gradle
+++ b/TriangularLake/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile files('libs/ormlite-android.jar')
     compile files('libs/ormlite-core.jar')
 }
