Added menu, buttons menu and map, menu and filters activities and fragments. Fix bugs.

--- a/TriangularLake/app/build.gradle
+++ b/TriangularLake/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.triangularlake.constantine.triangularlake"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,9 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.stetho:stetho:1.1.0'
     compile files('libs/ormlite-android.jar')
     compile files('libs/ormlite-core.jar')
+    compile('com.mikepenz:materialdrawer:4.0.3@aar') {
+        transitive = true
+    }
 }
