--- a/TriangularLake/app/build.gradle
+++ b/TriangularLake/app/build.gradle
@@ -22,10 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
-//    compile 'com.squareup.picasso:picasso:2.5.2'
-//    compile 'com.facebook.stetho:stetho:1.1.0'
-    compile files('libs/ormlite-android.jar')
-    compile files('libs/ormlite-core.jar')
+    //    compile 'com.squareup.picasso:picasso:2.5.2'
+    //    compile 'com.facebook.stetho:stetho:1.1.0'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
     // library for layout_height="wrap_content"
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
     compile 'com.github.bumptech.glide:glide:3.6.1'
