--- a/TriangularLake/app/build.gradle
+++ b/TriangularLake/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
@@ -17,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
@@ -26,9 +30,19 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     //    compile 'com.squareup.picasso:picasso:2.5.2'
     //    compile 'com.facebook.stetho:stetho:1.1.0'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
-    compile 'com.j256.ormlite:ormlite-core:4.48'
     // library for layout_height="wrap_content"
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+buildscript {
+    ext.kotlin_version = '1.0.0-beta-1103'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
 }
