--- a/TriangularLake/app/build.gradle
+++ b/TriangularLake/app/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:+'
     //    compile 'com.squareup.picasso:picasso:2.5.2'
     //    compile 'com.facebook.stetho:stetho:1.1.0'
