--- a/PhotoasgiftServer/pom.xml
+++ b/PhotoasgiftServer/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.b4w.photo_as_gift.server</groupId>
     <artifactId>com.b4w.photo_as_gift.server</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <!--<packaging>war</packaging>-->
+    <packaging>war</packaging>
 
     <properties>
         <spring.version>4.2.5.RELEASE</spring.version>
@@ -16,6 +16,9 @@
         <spring.data.varsion>1.9.4.RELEASE</spring.data.varsion>
         <hibernate-entitymanager.version>5.1.0.Final</hibernate-entitymanager.version>
         <postresql.version>9.1-901-1.jdbc4</postresql.version>
+        <apache.commons.version>2.1.1</apache.commons.version>
+        <jta.version>1.1</jta.version>
+        <jacson.databind.version>2.7.3</jacson.databind.version>
     </properties>
 
     <dependencies>
@@ -53,6 +56,23 @@
             <artifactId>postgresql</artifactId>
             <version>${postresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${apache.commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>${jta.version}</version>
+        </dependency>
+
+        <!-- JSON Converter -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jacson.databind.version}</version>
+        </dependency>
 
     </dependencies>
 
@@ -65,7 +85,9 @@
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals><goal>copy</goal></goals>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
